delete:: 작품 정보 수정 기능 제거
