# api_specification.yml
@@ -479,126 +479,6 @@ paths:
                 type: string
                 example: "Validation error details"
 
-
-  # 작품 수정
-  picture/modify/{picture_id}:
-    post:
-      tags:
-        - "Picture"
-      summary: "기존 작품 정보 수정"
-      consumes:
-        - form-data
-      description: "JWT 토큰을 통해 인증된 사용자만 기존의 Picture 데이터를 수정할 수 있음"
-      security:
-        - bearerAuth: [ ]
-      parameters:
-        - in: body
-          name: picture
-          description: "작품 정보를 포함하는 객체\n작품의 name, artist, gallery, start_date, end_date, custom_explanation, custom_question, sound 등을 포함\n이 때 헤더에 엑세스토큰 넣어야함!!\n그리고 사진이 포함돼있으므로 json형태가 아니라 form-data형식으로 request해야함"
-          required: true
-          schema:
-            type: integer
-          description: "수정할 Picture의 ID"
-        - in: body
-          name: picture
-          description: "수정할 작품의 정보\n각 필드는 수정할 작품의 새로운 값을 전달"
-          required: true
-          schema:
-            type: object
-            properties:
-              name:
-                type: string
-                description: "작품명"
-                example: "Starry Night"
-              artist:
-                type: string
-                description: "작가명"
-                example: "Vincent van Gogh"
-              gallery:
-                type: string
-                description: "전시회명"
-                example: "Museum of Modern Art"
-              start_date:
-                type: string
-                format: date-time
-                description: "전시 시작 날짜"
-                example: "2024-11-10 10:00"
-              end_date:
-                type: string
-                format: date-time
-                description: "전시 종료 날짜"
-                example: "2024-12-10 18:00"
-              custom_prompt:
-                type: string
-                description: "커스텀 프롬프트"
-                example: "This is a prompt of the artwork."
-              custom_explanation:
-                type: string
-                description: "커스텀 설명"
-                example: "This is a detailed explanation of the artwork."
-              custom_question:
-                type: string
-                description: "커스텀 질문"
-                example: "What emotions does this artwork evoke?"
-              picture_photo:
-                type: string
-                description: "사진"
-                example: "파일 형태로 백에 전달 by form-data"
-            required:
-              - name
-              - artist
-              - gallery
-              - start_date
-              - end_date
-              - custom_explanation
-              - custom_question
-              - picture_photo
-      responses:
-        "200":
-          description: "Picture updated successfully"
-          schema:
-            type: object
-            properties:
-              message:
-                type: string
-                example: "Picture updated successfully"
-              picture_id:
-                type: integer
-                example: 1
-        "401":
-          description: "Unauthorized"
-          schema:
-            type: object
-            properties:
-              error:
-                type: string
-                example: "Invalid or missing token"
-        "403":
-          description: "Permission denied"
-          schema:
-            type: object
-            properties:
-              error:
-                type: string
-                example: "Permission denied"
-        "400":
-          description: "Validation error"
-          schema:
-            type: object
-            properties:
-              error:
-                type: string
-                example: "Validation error details"
-        "404":
-          description: "Picture not found"
-          schema:
-            type: object
-            properties:
-              error:
-                type: string
-                example: "Picture not found"
-
-
   #사진+글귀 파일
   combined_picture/upload_combined_picture:
     post:
