# artique/views/picture_views.py
@@ -61,51 +61,3 @@ def create():
         return jsonify({"message": "Invalid date format. Use 'YYYY-MM-DD HH:MM'"}), 400
     except Exception as e:
         return jsonify({"message": f"An error occurred: {str(e)}"}), 500
-
-
-
-@bp.route('/modify/<int:picture_id>', methods=['POST'])
-@jwt_required()
-def modify(picture_id):
-    picture = Picture.query.get_or_404(picture_id)
-
-    # 현재 로그인한 사용자의 이메일 가져오기
-    user_email = get_jwt_identity()
-
-    # picture.user_id를 통해 email 정보 가져오기
-    user_email_from_picture = User.query.filter_by(id=picture.user_id).first().email
-
-    # 이메일 주소 비교
-    if user_email_from_picture != user_email:
-        return jsonify({"message": "Permission denied"}), 403
-
-    # request에서 사진, 사운드 가져오고 S3에 파일 업로드
-    photo_file = request.files['picture_photo']
-
-    if photo_file:
-        photo_file_url = upload_file_to_s3(photo_file, current_app.config["S3_BUCKET_NAME"], folder="pictures")
-
-    # 날짜 변환
-    start_date = datetime.strptime(request.form.get("start_date"), '%Y-%m-%d %H:%M')
-    end_date = datetime.strptime(request.form.get("end_date"), '%Y-%m-%d %H:%M')
-
-    try:
-        picture.name = request.form.get("name")
-        picture.artist = request.form.get("artist")
-        picture.gallery = request.form.get("gallery")
-        picture.start_date = start_date
-        picture.end_date = end_date
-        picture.custom_explanation = request.form.get("custom_explanation")
-        picture.custom_question = request.form.get("custom_question")
-        picture.picture_photo = photo_file_url
-
-        db.session.commit()
-
-        return jsonify({"message": "Picture updated successfully", "photo_url": photo_file_url}), 200
-
-    except KeyError as e:
-        return jsonify({"message": f"Missing key: {str(e)}"}), 400
-    except ValueError as e:
-        return jsonify({"message": "Invalid date format. Use 'YYYY-MM-DD HH:MM'"}), 400
-    except Exception as e:
-        return jsonify({"message": f"An error occurred: {str(e)}"}), 500
